--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "NODE_ENV=development nodemon index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
+    "start": "NODE_ENV=production node index.js"
   },
   "keywords": [],
   "author": "",
